.deployment/workflows/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infratoken-service
spec:
  selector:
    matchLabels:
      app: infratoken-service
  template:
    metadata:
      labels:
        app: infratoken-service
    spec:
      containers:
      - name: infratoken-service
        image: ghcr.io/marciohideaki/infratokenpoc:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
