.deployment/workflows/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infratoken-service
spec:
  ports:
  - port: 3000
  selector:
    app: infratoken-service
